--- a/registry/src/components/Accordion/variables.css
+++ b/registry/src/components/Accordion/variables.css
@@ -1,5 +1,5 @@
 :root,
-[data-theme='light'] {
+[data-scheme='light'] {
   /* TEXT */
   --par-color-text-accordion-item-enabled: var(--par-gray-550);
   --par-color-text-accordion-item-hovered: var(--par-gray-600);
