--- a/registry/src/components/theme/index.css
+++ b/registry/src/components/theme/index.css
@@ -20,8 +20,8 @@
   outline-offset: 1px;
 }
 
-[data-theme='dark'] *:focus-visible,
-[data-theme='dark'] *[data-focus-visible='true'] {
+[data-scheme='dark'] *:focus-visible,
+[data-scheme='dark'] *[data-focus-visible='true'] {
   outline: 2px solid var(--par-color-ring-visible-focused);
   outline-offset: 1px;
 }
