fix: update hover effect on table body rows to target cell wrapper for improved styling

--- a/registry/src/components/Table/index.css
+++ b/registry/src/components/Table/index.css
@@ -137,7 +137,7 @@
 .table-body-row {
   @apply h-fit;
 }
-.table-body-row:hover > .table-body-cell {
+.table-body-row:hover .table-body-cell-wrapper {
   @apply bg-[var(--par-color-bg-table-body-row-item-hovered)];
 }
 
